--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # testing
 /coverage
+/tests/__mocks__
+*.test.js.snap
 
 # next.js
 /.next/
@@ -15,18 +17,53 @@
 
 # production
 /build
+/dist
+
+# environment variables and secrets
+.env
+.env*.local
+.env.development
+.env.staging
+.env.production
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# API keys and secrets
+.env.secrets
+config/secrets.json
+secrets/
+private-keys/
+*.key
+*.pem
+*.p12
+*.pfx
 
 # misc
 .DS_Store
 *.pem
+*.log
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# local env files
-.env*.local
+# runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
 
 # vercel
 .vercel
@@ -35,9 +72,36 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# IDEs
+# IDEs and editors
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# deployment
+.netlify/
+.render/
+
+# cache
+.cache/
+.temp/
+.tmp/
+
+# Docker
+.dockerignore
+Dockerfile.dev
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
