--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
   "name": "blankate",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "Modern crypto & Web3 dashboard with real-time data and portfolio tracking",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:netlify": "NETLIFY=true next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true next build",
+    "clean": "rimraf .next out dist build"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "framer-motion": "^10.16.16",
-    "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "recharts": "^2.8.0",
-    "swr": "^2.2.4",
-    "wagmi": "^2.5.7",
-    "@rainbow-me/rainbowkit": "^2.0.4",
-    "viem": "^2.7.1",
-    "@web3modal/wagmi": "^4.1.7",
-    "next-auth": "^4.24.5",
-    "@supabase/supabase-js": "^2.38.5",
-    "ethers": "^6.8.1",
-    "lucide-react": "^0.298.0",
-    "clsx": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "next-themes": "^0.2.1"
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "@rainbow-me/rainbowkit": "^2.1.2",
+    "@tanstack/react-query": "^5.45.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
+    "next": "^14.2.3",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
+    "swr": "^2.2.5",
+    "viem": "^2.13.6",
+    "wagmi": "^2.9.8"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "postcss": "^8.4.38",
+    "rimraf": "^5.0.10",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
