--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
@@ -8,9 +8,13 @@ on:
 
 env:
   NODE_VERSION: '18'
+  CACHE_PATHS: |
+    ~/.npm
+    ${{ github.workspace }}/.next/cache
 
 jobs:
   lint-and-test:
+    name: Lint and Test
     runs-on: ubuntu-latest
     
     steps:
@@ -23,8 +27,16 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.CACHE_PATHS }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: Run linter
         run: npm run lint
@@ -32,7 +44,11 @@ jobs:
       - name: Run type check
         run: npm run type-check
 
+      - name: Check formatting
+        run: npm run format:check
+
   build:
+    name: Build Application
     runs-on: ubuntu-latest
     needs: lint-and-test
     
@@ -46,28 +62,52 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.CACHE_PATHS }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: Build application
         run: npm run build
         env:
           NEXT_PUBLIC_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_PROJECT_ID }}
           NEXT_PUBLIC_COINGECKO_API_KEY: ${{ secrets.NEXT_PUBLIC_COINGECKO_API_KEY }}
+          NODE_ENV: production
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build-files
+          name: build-files-${{ github.sha }}
           path: |
             .next/
             out/
           retention-days: 7
 
-  deploy-netlify:
+  security-scan:
+    name: Security Scan
     runs-on: ubuntu-latest
-    needs: build
+    needs: lint-and-test
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run npm audit
+        run: npm audit --audit-level=high
+        continue-on-error: true
+
+  deploy-netlify:
+    name: Deploy to Netlify
+    runs-on: ubuntu-latest
+    needs: [build, security-scan]
     if: github.ref == 'refs/heads/main'
+    environment: production
     
     steps:
       - name: Checkout code
@@ -80,13 +120,14 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: Build for Netlify
-        run: npm run build
+        run: npm run build:netlify
         env:
           NEXT_PUBLIC_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_PROJECT_ID }}
           NEXT_PUBLIC_COINGECKO_API_KEY: ${{ secrets.NEXT_PUBLIC_COINGECKO_API_KEY }}
+          NODE_ENV: production
 
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
